Archiving from Micro.blog.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 </p>
 <p>After using Brave for the last few years, I recently started getting tired of their in-app ads for crypto wallets, search, etc. I tried <a href="https://browser.kagi.com/">Orion</a> for a bit and love their mission, but I’m a tab hoarder and I had a few times where Activity Monitor showed it using 15+ GB of memory with ~100 tabs open.</p>
-<p>I’m a big fan of <a href="arc.net">Arc</a> as well and use it for more exploratory projects where I can use it as a playground for tabs and brainstorming docs — like when planning a trip or looking for visual inspiration. But after opening Firefox for the first time in a while, it felt snappy and&hellip;friendly?</p>
+<p>I’m a big fan of <a href="https://arc.net">Arc</a> as well and use it for more exploratory projects where I can use it as a playground for tabs and brainstorming docs — like when planning a trip or looking for visual inspiration. But after opening Firefox for the first time in a while, it felt snappy and&hellip;friendly?</p>
 <p><a href="https://blog.zmh.org/uploads/2023/f192fc619e.png" 
    class="glightbox"
    data-gallery="621ea827216ca9c6126a0242c8a5a85f"
@@ -293,7 +293,7 @@
 			 <p>Recently purchased the <a href="https://www.amazon.com/Powerful-Flashlight-Rechargeable-Neutral-Brightest/dp/B07KFDS8ZS?dchild=1&amp;keywords=Sofirn+BLF+SP36&amp;qid=1614717097&amp;sr=8-1&amp;linkCode=ll1&amp;tag=zmh0a-20&amp;linkId=51162fe3d0c0b6f357e4ab479c38fdf2&amp;language=en_US&amp;ref_=as_li_ss_tl">Sofirn BLF SP36</a></p>
 <h3 id="research">Research</h3>
 <ul>
-<li>Mainly the <a href="%5Bhttps://www.reddit.com/r/flashlight/%5D">Reddit flashlight forum</a>, <a href="https://www.reddit.com/r/flashlight/comments/khzj6x/arbitrary_list_of_popular_lights_winter_solstice/">this thread in particular</a></li>
+<li>Mainly the <a href="https://www.reddit.com/r/flashlight/">Reddit flashlight forum</a>, <a href="https://www.reddit.com/r/flashlight/comments/khzj6x/arbitrary_list_of_popular_lights_winter_solstice/">this thread in particular</a></li>
 <li><a href="https://budgetlightforum.com/forum">Budget Light Forum</a></li>
 </ul>
 
