Archiving from Micro.blog.

--- a/index.html
+++ b/index.html
@@ -66,29 +66,29 @@
 <p><img src="https://blog.zmh.org/uploads/2024/cleanshot-2023-03-01-at-21.43.462x.png" alt=""></p>
 <p>I’m particularly excited to be moving to a <code>.org</code> domain. When I thought about it more deeply, I realized many of the sites I admire on the internet are .org’s. A few favorites:</p>
 <ul>
-<li><a href="kk.org">kk.org</a></li>
-<li><a href="sivers.org">sivers.org</a></li>
-<li><a href="jcs.org">jcs.org</a></li>
-<li><a href="tbray.org">tbray.org</a></li>
-<li><a href="feross.org">feross.org</a></li>
-<li><a href="andymatuschak.org">andymatuschak.org</a></li>
-<li><a href="jwz.org/blog">jwz.org/blog</a></li>
-<li><a href="moxie.org">moxie.org</a></li>
-<li><a href="archive.org">archive.org</a></li>
-<li><a href="wikipedia.org">wikipedia.org</a></li>
-<li><a href="harpers.org">harpers.org</a></li>
-<li><a href="gnu.org">gnu.org</a></li>
-<li><a href="eff.org">eff.org</a></li>
-<li><a href="mozilla.org">mozilla.org</a></li>
-<li><a href="kouzou.org">kouzou.org</a></li>
-<li><a href="undeadly.org">undeadly.org</a></li>
-<li><a href="themarginalian.org">themarginalian.org</a> (formerly <a href="brainpickings.org">brainpickings.org</a>)</li>
-<li><a href="mathbabe.org">mathbabe.org</a></li>
-<li><a href="brandur.org">brandur.org</a></li>
-<li><a href="dtrace.org">dtrace.org</a></li>
-<li><a href="rootsofprogress.org/writing">rootsofprogress.org</a></li>
-<li><a href="cheapskatesguide.org">cheapskatesguide.org</a></li>
-<li><a href="computerhistory.org">computerhistory.org</a></li>
+<li><a href="https://kk.org">kk.org</a></li>
+<li><a href="https://sivers.org">sivers.org</a></li>
+<li><a href="https://jcs.org">jcs.org</a></li>
+<li><a href="https://tbray.org">tbray.org</a></li>
+<li><a href="https://feross.org">feross.org</a></li>
+<li><a href="https://andymatuschak.org">andymatuschak.org</a></li>
+<li><a href="https://jwz.org/blog">jwz.org/blog</a></li>
+<li><a href="https://moxie.org">moxie.org</a></li>
+<li><a href="https://archive.org">archive.org</a></li>
+<li><a href="https://wikipedia.org">wikipedia.org</a></li>
+<li><a href="https://harpers.org">harpers.org</a></li>
+<li><a href="https://gnu.org">gnu.org</a></li>
+<li><a href="https://eff.org">eff.org</a></li>
+<li><a href="https://mozilla.org">mozilla.org</a></li>
+<li><a href="https://kouzou.org">kouzou.org</a></li>
+<li><a href="https://undeadly.org">undeadly.org</a></li>
+<li><a href="https://themarginalian.org">themarginalian.org</a> (formerly <a href="https://brainpickings.org">brainpickings.org</a>)</li>
+<li><a href="https://mathbabe.org">mathbabe.org</a></li>
+<li><a href="https://brandur.org">brandur.org</a></li>
+<li><a href="https://dtrace.org">dtrace.org</a></li>
+<li><a href="https://rootsofprogress.org/writing">rootsofprogress.org</a></li>
+<li><a href="https://cheapskatesguide.org">cheapskatesguide.org</a></li>
+<li><a href="https://computerhistory.org">computerhistory.org</a></li>
 </ul>
 <p>And I’m sure many more I’m forgetting.</p>
 
